# zeroslam

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous-integration.yml
source/: assert.hpp  camera.hpp  consensus.hpp  factor_graph.hpp  feature.hpp  frame.hpp  geometry.hpp  image.hpp  landmark.hpp  lie.hpp  main.cpp  map.hpp  math.hpp  matrix.hpp  matrix_decomposition_cholesky.hpp  matrix_decomposition_lower_upper.hpp  matrix_decomposition_singular_value.hpp  matrix_eigen_solver.hpp  matrix_sparse_block.hpp  matrix_sparse_block_diagonal.hpp  pose_estimation.hpp  slam.hpp
tests/: assert.test.cpp  camera.test.cpp  consensus.test.cpp  factor_graph.test.cpp  feature.test.cpp  frame.test.cpp  geometry.test.cpp  image.test.cpp  landmark.test.cpp  lie.test.cpp  map.test.cpp  math.test.cpp  matrix.test.cpp  matrix_decomposition_cholesky.test.cpp  matrix_decomposition_lower_upper.test.cpp  matrix_decomposition_singular_value.test.cpp  matrix_eigen_solver.test.cpp  matrix_sparse_block.test.cpp  matrix_sparse_block_diagonal.test.cpp  pose_estimation.test.cpp  slam.test.cpp
tools/trajectory_alignment/: absolute_orientation.hpp  main.cpp  plot.hpp
