CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
CMAKE_POLICY(VERSION 3.10)
###############################################################################
# PROJECT
###############################################################################
PROJECT(zeroslam)
###############################################################################
# CONFIGURATION
###############################################################################
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
CMAKE_POLICY(SET CMP0069 NEW)
SET(CMAKE_POLICY_DEFAULT_CMP0069 NEW)
SET(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
    SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "" "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
ENDIF()
IF(NOT CMAKE_CONFIGURATION_TYPES)
    SET(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})
ENDIF()
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/runtime/${CMAKE_BUILD_TYPE}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/archive/${CMAKE_BUILD_TYPE}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/library/${CMAKE_BUILD_TYPE}")
FOREACH(BUILD_TYPE ${CMAKE_CONFIGURATION_TYPES})
    STRING(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} "${CMAKE_BINARY_DIR}/runtime/${BUILD_TYPE}")
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} "${CMAKE_BINARY_DIR}/archive/${BUILD_TYPE}")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} "${CMAKE_BINARY_DIR}/library/${BUILD_TYPE}")
ENDFOREACH()
###############################################################################
# FLAGS
###############################################################################
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wpedantic")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-alloc-size-larger-than")
    IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c++98-compat")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c++98-compat-pedantic")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-newline-eof")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-reserved-id-macro")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-padded")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-disabled-macro-expansion")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-global-constructors")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-exit-time-destructors")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-weak-vtables")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-float-equal")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unsafe-buffer-usage")
    ENDIF()
ENDIF()
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:strict")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP8")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_HAS_EXCEPTIONS=0")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR-")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_ITERATOR_DEBUG_LEVEL=0")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_USE_MATH_DEFINES=1")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX=1")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_ENABLE_ATOMIC_ALIGNMENT_FIX=1")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_NONSTDC_NO_WARNINGS=1")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_SECURE_NO_WARNINGS=1")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
ENDIF()
IF(FALSE)
    # For profiling ensure perf is enabled:
    # sudo sysctl kernel.perf_event_paranoid=-1
    # Generally it seems callgrind gives better results.
    IF(NOT CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
        MESSAGE(FATAL_ERROR "Perform profiling in RelWithDebInfo mode.")
    ENDIF()
ENDIF()
IF(FALSE)
    # Disable address space randomisation to avoid random failures:
    # echo 0 | sudo tee /proc/sys/kernel/randomize_va_space
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=address")
ENDIF()
IF(FALSE) # Not in GCC
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=memory")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=memory")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=memory")
ENDIF()
IF(FALSE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=thread")
ENDIF()
IF(FALSE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=undefined")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=undefined")
ENDIF()
###############################################################################
# LIBRARIES
###############################################################################
SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)
###############################################################################
# MAIN
###############################################################################
FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/source/*")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/source/")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE Threads::Threads)
###############################################################################
# TOOLING
###############################################################################
FILE(GLOB TOOL_DIRS CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/tools/*")
FOREACH(TOOL_DIR ${TOOL_DIRS})
    FILE(RELATIVE_PATH TOOL_DIR_NAME "${CMAKE_SOURCE_DIR}/tools/" ${TOOL_DIR})
    FILE(GLOB_RECURSE TOOL_FILES CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/tools/${TOOL_DIR_NAME}/*")
    ADD_EXECUTABLE(${TOOL_DIR_NAME} EXCLUDE_FROM_ALL ${TOOL_FILES})
    TARGET_INCLUDE_DIRECTORIES(${TOOL_DIR_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/tools/${TOOL_DIR_NAME}/")
    TARGET_INCLUDE_DIRECTORIES(${TOOL_DIR_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/source/")
    TARGET_LINK_LIBRARIES(${TOOL_DIR_NAME} PRIVATE Threads::Threads)
    SET_TARGET_PROPERTIES(${TOOL_DIR_NAME} PROPERTIES FOLDER tools)
ENDFOREACH()
###############################################################################
# TESTING
###############################################################################
ENABLE_TESTING()
FILE(GLOB_RECURSE TEST_FILES CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/tests/*")
FOREACH(TEST_FILE ${TEST_FILES})
    FILE(RELATIVE_PATH TEST_FILE_NAME "${CMAKE_SOURCE_DIR}/tests/" ${TEST_FILE})
    STRING(REPLACE ".test.cpp" "" SOURCE_FILE_NAME ${TEST_FILE_NAME})
    STRING(REPLACE "/" "_" TEST_TARGET_NAME ${SOURCE_FILE_NAME})
    SET(TEST_TARGET_NAME "test_${TEST_TARGET_NAME}")
    ADD_EXECUTABLE(${TEST_TARGET_NAME} EXCLUDE_FROM_ALL ${TEST_FILE} "${CMAKE_SOURCE_DIR}/source/${SOURCE_FILE_NAME}.hpp")
    TARGET_INCLUDE_DIRECTORIES(${TEST_TARGET_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/source/")
    TARGET_LINK_LIBRARIES(${TEST_TARGET_NAME} PRIVATE Threads::Threads)
    SET_TARGET_PROPERTIES(${TEST_TARGET_NAME} PROPERTIES FOLDER tests)
    ADD_TEST(NAME test_${TEST_TARGET_NAME} COMMAND $<TARGET_FILE:${TEST_TARGET_NAME}>)
    ADD_TEST(NAME build_${TEST_TARGET_NAME} COMMAND "${CMAKE_COMMAND}" "--build" "${CMAKE_BINARY_DIR}" "--config" "$<CONFIG>" "--target" "${TEST_TARGET_NAME}")
    SET_TESTS_PROPERTIES(test_${TEST_TARGET_NAME} PROPERTIES DEPENDS build_${TEST_TARGET_NAME})
    SET_TESTS_PROPERTIES(build_${TEST_TARGET_NAME} PROPERTIES DEPENDS ${TEST_TARGET_NAME})
ENDFOREACH()
